# serialization

./: .gitignore  CMakeLists.txt
libs/ter/: CMakeLists.txt  key.h  keyEvents.cpp  tHandler.cpp
src/: app.cpp  app.h  element.cpp  element.h  gui.cpp  gui.h  key.h  keyEvents.cpp  keyEvents.h  main.cpp  tHandler.cpp  tHandler.h  terminal.c  terminal.cpp  terminal.h
src/gui/: element.cpp  element.h  gCode.h  gui.cpp  gui.h  guiDefault.cpp  guiDefault.h
src/ser/: ser.cpp  ser.h
src/ter/: color.h  tHandler.h  terminal.cpp  terminal.h
